2008-02-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/action.c (act_getline): Bugfix. Do not return eof
	on an empty line. Reported by Damon Harper.

2008-02-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/pop3client.c: Implement variable expansions in the
	prompt. 

	* NEWS: Update.

	* pop3d/bulletin.c (read_bulletin_db): Return success if db does
	not exist.
	* lib/strexit.c: New file.
	* lib/signal.c: New file.
	
2008-02-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	* pop3d/extra.c (pop3d_readline): After a failed authorization
	attempt many clients simply disconnect without issuing QUIT. 
	Do not count this as a protocol error.    

	* NEWS: Update.
	* imap4d/bye.c, imap4d/starttls.c, imap4d/util.c: Use exit codes
	from sysexits.h
	* imap4d/imap4d.c: Use mu_set_signals to install signals.
	Use exit codes from sysexits.h.
	* imap4d/imap4d.h: Include sysexits.h and muaux.h
	(ERR_TERMINATE): New define.
	(imap4d_sigchld,imap4d_signal): Remove.
	(imap4d_master_signal,imap4d_child_signal): New prototypes.
	* imap4d/signal.c (imap4d_master_signal,imap4d_child_signal): New
	functions.

	* pop3d/pop3d.h Include sysexits.h and muaux.h
	(ERR_TERMINATE): New define.
	(pop3d_signal): Remove.
	(pop3d_master_signal, pop3d_child_signal): New protos.
	* pop3d/signal.c (pop3d_master_signal, pop3d_child_signal): New
	functions.
	
	* pop3d/extra.c, pop3d/popauth.c
	* pop3d/pop3d.c: Use mu_set_signals to install signals.
	Use exit codes from sysexits.h.
	
	* include/mailutils/server.h (mu_m_server_set_strexit): New
	prototype.
	* include/mailutils/types.hin (MU_ARRAY_SIZE): New define.
	
	* lib/Makefile.am (libmuaux_la_SOURCES): Add signal.c, strexit.c.
	(noinst_HEADERS): Add muaux.h
	* lib/muaux.h: New file.

	* libsieve/extensions/spamd.c: Add NLS markers.

	* mailbox/header.c (header_readline): Minor rewrite.
	* mailbox/msrv.c (struct _mu_m_server): New member `strexit'.
	(mu_m_server_begin): Call alloc_children.
	(mu_m_server_restore_signals): New function.